third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/self_application.move
// Fixes #16435
module 0xc0ffee::m {
    public fun test() {
        let f = |func| func();
        f(f);
    }
}
